feat(head): allow HEAD requests on endpoint
The headers include relevant resolved tx id data without the fully resolved record data. It is a cheap way get the resolved tx id and ttl.
