# src/server.ts
@@ -33,7 +33,7 @@ export const app = express();
 app.use(
   cors({
     origin: '*',
-    methods: ['GET'],
+    methods: ['GET', 'HEAD'],
   }),
 );
 
@@ -83,6 +83,34 @@ app.get('/ar-io/resolver/info', (_req, res) => {
     processId: config.IO_PROCESS_ID,
     lastEvaluationTimestamp: getLastEvaluatedTimestamp(),
   });
+});
+
+app.head('/ar-io/resolver/records/:name', async (req, res) => {
+  try {
+    log.debug('Checking cache for record', { name: req.params.name });
+    const resolvedRecordData = await cache.get(req.params.name);
+    if (!resolvedRecordData) {
+      res.status(404).send();
+      return;
+    }
+    const recordData = JSON.parse(resolvedRecordData.toString());
+    res
+      .status(200)
+      .set({
+        'Cache-Control': `public, max-age=${recordData.ttlSeconds}`,
+        'Content-Type': 'application/json',
+        'X-ArNS-Resolved-Id': recordData.txId,
+        'X-ArNS-Ttl-Seconds': recordData.ttlSeconds,
+      })
+      .send();
+  } catch (err: any) {
+    log.error('Failed to check for record', {
+      name: req.params.name,
+      message: err?.message,
+      stack: err?.stack,
+    });
+    res.status(500).send();
+  }
 });
 
 app.get('/ar-io/resolver/records/:name', async (req, res) => {
